Added the orders grid

--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,9 +1,2 @@
-
-<h1>Welcome to the Web Demo</h1>
-
-
-  Here are some usefull links for you:
-  <ul>
-    <li></li>
-  </ul>
-
+<h1>Orders</h1>
+<data-grid [settings]="ordersGrid"></data-grid>
