--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,3 +1,16 @@
-<h1>Orders</h1>
-<data-grid [settings]="ordersGrid"></data-grid>
-<select-popup [settings]="selectCustomerGrid" ></select-popup>
+<h2>Orders</h2>
+<div class="table-responsive">
+    <data-grid [settings]="ordersGrid"></data-grid>
+  </div>
+  <select-popup [settings]="selectCustomerGrid"></select-popup>
+  <tabset>
+    <tab heading='Ship Info'>
+      <data-area [settings]="shipInfoArea"></data-area>
+    </tab>
+    <tab heading='Order Details {{getOrderTotal()}}'>
+      <div class="table-responsive">
+        <data-grid [settings]="orderDetailsGrid"></data-grid>
+      </div>
+    </tab>
+  </tabset>
+  <button class="btn btn-primary" (click)="printCurrentOrder()">Print</button>
