--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" routerLink="/">Cool Web Application</a>
+      <a class="navbar-brand" routerLink="/">Northwind</a>
     </div>
 
     <!-- Display all links based on the registered routes -->
