--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -45,3 +45,6 @@ h1{
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102,175,233,.6);
     
   }
+  .modal-backdrop{
+      z-index: 0;
+  }
