--- a/FrontEnd/src/app/customers/customers.component.html
+++ b/FrontEnd/src/app/customers/customers.component.html
@@ -1,1 +1,25 @@
-<data-grid2 [settings]="customers"></data-grid2>
+<mat-form-field class="full-width">
+    <input matInput [(ngModel)]="searchString" placeholder="Search Customer" [ngModelOptions]="{standalone: true}">
+    <mat-icon matSuffix (click)="clearSearch()">clear</mat-icon>
+</mat-form-field>
+<mat-accordion>
+    <ng-container *ngFor="let c of customers.items">
+    <mat-expansion-panel *ngIf="showCustomer(c)" (opened)="selectCustomer(c)">
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                {{c.companyName.value}}
+            </mat-panel-title>
+
+        </mat-expansion-panel-header>
+        <div class="row" *ngIf="customers.currentRow==c">
+            <data-area [settings]="dataArea"></data-area>
+        </div>
+        <button (click)="customers.currentRow.save()"
+            [disabled]="!customers.currentRow.wasChanged()" class="btn glyphicon glyphicon-ok btn-success"></button>
+        <button 
+            (click)="customers.currentRow.reset();customers.setCurrentRow(c);"
+            [disabled]="!customers.currentRow.wasChanged()"
+            class="btn btn-danger glyphicon glyphicon-ban-circle ng-star-inserted"></button>
+    </mat-expansion-panel>
+</ng-container>
+</mat-accordion>
