--- a/FrontEnd/src/app/products/products.component.html
+++ b/FrontEnd/src/app/products/products.component.html
@@ -1,1 +1,7 @@
-<data-grid2 [settings]="products" ></data-grid2>
+<data-grid2 [settings]="products" height="300"></data-grid2>
+
+<mat-tab-group >
+    <mat-tab label="More Info">
+      <data-area [settings]="ProductInfoArea"></data-area>
+    </mat-tab>
+  </mat-tab-group>
