--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,7 +1,6 @@
-
+<div class="row">
     <data-grid2 [settings]="ordersGrid" height="250"></data-grid2>
- <br>
-  
+  </div>
 
 <mat-tab-group >
   <mat-tab label="ShipInfo">
@@ -13,6 +12,3 @@
 
 </mat-tab-group>
 <button class="btn btn-primary" (click)="printCurrentOrder()">Print</button>
-
-
-<select-popup [settings]="selectCustomerGrid"></select-popup>
