--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -10,7 +10,7 @@
     <img src="http://www.cbc.ca/northwind/assets_c/2010/12/sitenavlogo-thumb-268xauto-68304.jpg" style="width:225px">
     <mat-nav-list role="list">
       <ng-container *ngFor="let m of router.config">
-        <mat-list-item *ngIf="m.path && m.path.indexOf(':')<0" routerLinkActive="active-route">
+        <mat-list-item *ngIf="shouldDisplayRoute(m)" routerLinkActive="active-route">
           <a matLine [routerLink]="m.path">{{m.path}}</a>
         </mat-list-item>
 
