Adjust for radweb3

--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -16,3 +16,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .modal-backdrop{
     z-index: 0;
 }
+.row{
+  margin-right: 0!important;
+  margin-left: 0!important;
+}
