--- a/FrontEnd/src/app/products/products.component.html
+++ b/FrontEnd/src/app/products/products.component.html
@@ -1,7 +1,7 @@
 <data-grid2 [settings]="products" height="300"></data-grid2>
-
+<data-area [settings]="ProductInfoArea"></data-area>
 <mat-tab-group >
-    <mat-tab label="More Info">
-      <data-area [settings]="ProductInfoArea"></data-area>
+    <mat-tab label="More Info" >
+      <data-area [settings]="ProductInfoArea" class="fixit"></data-area>
     </mat-tab>
   </mat-tab-group>
