--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,37 +1,37 @@
-<mat-toolbar color="primary">
-  <button mat-button class="sidenav-toggle" (click)="sidenav.toggle()">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span class="toolbar-title">{{currentTitle()}}</span>
-  <button mat-flat-button color="primary" (click)="signIn()">{{signInText()}}</button>
-</mat-toolbar>
-<mat-sidenav-container class="app-sidenav-container">
-  <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10" [opened]="!isScreenSmall()"
-    [mode]="isScreenSmall()?'over':'side'">
-    <img src="https://www.logomyway.com/logos_new/4899/5.png" style="width:225px;
+<div style="height:100%;display:flex;flex-direction: column;">
+  <mat-toolbar color="primary" style="flex-shrink: 0;">
+    <button mat-button class="sidenav-toggle" (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span class="toolbar-title">{{currentTitle()}}</span>
+    <button mat-flat-button color="primary" (click)="signIn()">{{signInText()}}</button>
+  </mat-toolbar>
+  <mat-sidenav-container class="app-sidenav-container">
+    <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10" [opened]="!isScreenSmall()"
+      [mode]="isScreenSmall()?'over':'side'">
+      <img src="https://www.logomyway.com/logos_new/4899/5.png" style="width:225px;
     height: 90px;
     object-fit: cover;
     
     object-position: 0 -39px;">
-    <mat-nav-list role="list">
-      <ng-container *ngFor="let m of router.config">
-        <mat-list-item *ngIf="shouldDisplayRoute(m)" routerLinkActive="active-route">
-          <a matLine [routerLink]="m.path" (click)="routeClicked()">{{m.path}}</a>
-        </mat-list-item>
+      <mat-nav-list role="list">
+        <ng-container *ngFor="let m of router.config">
+          <mat-list-item *ngIf="shouldDisplayRoute(m)" routerLinkActive="active-route">
+            <a matLine [routerLink]="m.path" (click)="routeClicked()">{{m.path}}</a>
+          </mat-list-item>
 
-      </ng-container>
-    </mat-nav-list>
+        </ng-container>
+      </mat-nav-list>
 
-  </mat-sidenav>
-  <div class="app-sidenav-content ">
+    </mat-sidenav>
+    <div class="app-sidenav-content " >
 
 
-    <div class="wrapper">
-      <mat-card>
-        <router-outlet></router-outlet>
-      </mat-card>
+      <div class="wrapper"  style="height:100%">
+          <router-outlet></router-outlet>
+      </div>
+
     </div>
 
-  </div>
-
-</mat-sidenav-container>
+  </mat-sidenav-container>
+</div>
