--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -1,14 +1,20 @@
-<div class="row">
-    <data-grid [settings]="ordersGrid" height="250"></data-grid>
+
+<div >
+  <div class="row" style="height:100%">
+    <data-grid [settings]="ordersGrid"></data-grid>
   </div>
 
-<mat-tab-group >
-  <mat-tab label="ShipInfo">
-    <data-area [settings]="shipInfoArea"></data-area>
-  </mat-tab>
-  <mat-tab label="Order Details {{getOrderTotal()}}">
-    <data-grid [settings]="orderDetailsGrid" [height]="200"></data-grid>
-  </mat-tab>
+  <mat-tab-group>
+    <mat-tab label="ShipInfo">
+      <data-area [settings]="shipInfoArea"></data-area>
+    </mat-tab>
+    <mat-tab label="Order Details {{getOrderTotal()}}">
+      <data-grid [settings]="orderDetailsGrid" [height]="200"></data-grid>
+    </mat-tab>
 
-</mat-tab-group>
-<button mat-raised-button (click)="printCurrentOrder()">Print</button>
+  </mat-tab-group>
+  <div>
+    <button mat-raised-button (click)="printCurrentOrder()">Print</button>
+  </div>
+
+</div>
