--- a/FrontEnd/src/app/products/products.component.html
+++ b/FrontEnd/src/app/products/products.component.html
@@ -1,6 +1,11 @@
-<data-grid [settings]="products" height="300"></data-grid>
+<div class="full-page">
+  <div class="grow-item">
+
+<data-grid [settings]="products" ></data-grid>
+</div>
 <mat-tab-group>
   <mat-tab label="More Info">
     <data-area [settings]="ProductInfoArea" ></data-area>
   </mat-tab>
 </mat-tab-group>
+</div>
