--- a/FrontEnd/src/styles.scss
+++ b/FrontEnd/src/styles.scss
@@ -38,3 +38,10 @@ button {
 .table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
+.full-page{
+  height: 100%; display: flex; flex-flow: column;
+}
+.grow-item{
+  height: 200px; flex-grow: 1;
+}
