--- a/FrontEnd/src/app/common/yes-no-question/yes-no-question.component.html
+++ b/FrontEnd/src/app/common/yes-no-question/yes-no-question.component.html
@@ -1,16 +1,16 @@
 <div >
 
-  <h3 matDialogHeader>{{message}}</h3>
+  <h3 matDialogHeader>{{args.message}}</h3>
 
   <mat-dialog-actions>
 
-    <button mat-raised-button color="warning" (click)="close()" *ngIf="showOk">
+    <button mat-raised-button color="warning" (click)="close()" *ngIf="args.isAQuestion">
       No
     </button>
-    <button mat-raised-button color="primary" (click)="close()" *ngIf="!showOk">
-      Confirm
+    <button mat-raised-button color="primary" (click)="close()" *ngIf="!args.isAQuestion">
+      Ok
     </button>
-    <button mat-raised-button color="primary"  (click)="select()" *ngIf="showOk">
+    <button mat-raised-button color="primary"  (click)="select()" *ngIf="args.isAQuestion">
       Yes
     </button>
   </mat-dialog-actions>
