Updated to remult 0.4

--- a/FrontEnd/src/app/common/select-popup/select-popup.component.html
+++ b/FrontEnd/src/app/common/select-popup/select-popup.component.html
@@ -7,7 +7,7 @@
       <mat-icon matSuffix (click)="searchText=''">clear</mat-icon>
     </mat-form-field>
 
-    <data-grid [settings]="settings" [height]="300"></data-grid>
+    <data-grid [settings]="settings" height="300"></data-grid>
   </div>
   <div mat-dialog-actions>
     <button mat-raised-button (click)="close()">Cancel</button>
