--- a/FrontEnd/src/app/home/home.component.html
+++ b/FrontEnd/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     </mat-tab>
     <mat-tab label="Order Details {{getOrderTotal()}}" class="full-page" >
       <div class="full-page" style="padding:0 2px">
-      <data-grid class="grow-item" [settings]="orderDetailsGrid" [height]="200"></data-grid>
+      <data-grid class="grow-item" [settings]="orderDetailsGrid" height="200"></data-grid>
     </div>
     </mat-tab>
 
