updated to latest

--- a/FrontEnd/src/app/customers/customers.component.html
+++ b/FrontEnd/src/app/customers/customers.component.html
@@ -1,6 +1,6 @@
 <div style="display: block;">
-    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="options"
-        [colors]="colors" (chartClick)="chartClicked($event)"></canvas>
+    <!-- <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="options"
+        [colors]="colors" (chartClick)="chartClicked($event)"></canvas> -->
 </div>
 <h4 *ngIf="filterCountry" >
         {{filterCountry}} <a (click)="filterCountry=''">Show All</a>
