--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -9,11 +9,11 @@
   <mat-sidenav-container class="app-sidenav-container">
     <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10" [opened]="!ui.isScreenSmall()"
       [mode]="ui.isScreenSmall()?'over':'side'">
-      <img src="https://www.logomyway.com/logos_new/4899/5.png" style="width:225px;
+      <img src="https://media.licdn.com/dms/image/C4D0BAQHvhWilzaSkWg/company-logo_200_200/0/1655026637344?e=2147483647&v=beta&t=ME-yMiI9X5hD8_sv3FjYEBkmDOntLgfv3h3lA5-HJEQ" style="width:225px;
     height: 90px;
     object-fit: cover;
-    
-    object-position: 0 -39px;">
+    padding-left: 6px;
+    ">
       <mat-nav-list role="list">
         <ng-container *ngFor="let m of router.config">
           <mat-list-item *ngIf="shouldDisplayRoute(m)" routerLinkActive="active-route">
