--- a/FrontEnd/src/app/common/yes-no-question/yes-no-question.component.html
+++ b/FrontEnd/src/app/common/yes-no-question/yes-no-question.component.html
@@ -1,19 +1,30 @@
-<div >
-
-  <h3 matDialogHeader>{{args.message}}</h3>
+<div>
+  <h3 matDialogHeader>{{ args.message }}</h3>
 
   <mat-dialog-actions>
-
-    <button mat-raised-button color="warning" (click)="close()" *ngIf="args.isAQuestion">
-      No
+    <button
+      mat-raised-button
+      color="warning"
+      (click)="close()"
+      *ngIf="args.isAQuestion"
+    >
+      {{ terms.no }}
     </button>
-    <button mat-raised-button color="primary" (click)="close()" *ngIf="!args.isAQuestion">
-      Ok
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="close()"
+      *ngIf="!args.isAQuestion"
+    >
+      {{ terms.ok }}
     </button>
-    <button mat-raised-button color="primary"  (click)="select()" *ngIf="args.isAQuestion">
-      Yes
+    <button
+      mat-raised-button
+      color="primary"
+      (click)="select()"
+      *ngIf="args.isAQuestion"
+    >
+      {{ terms.yes }}
     </button>
   </mat-dialog-actions>
-
-
 </div>
