--- a/angular-vanilla/src/app/lib/yes-no-question/yes-no-question.component.html
+++ b/angular-vanilla/src/app/lib/yes-no-question/yes-no-question.component.html
@@ -8,7 +8,7 @@
     </button>
     <button mat-flat-button color="primary" (click)="select()">Yes</button>
     } @else {
-    <button mat-flat-button color="primary" (click)="close()">Ok</button>
+    <button mat-flat-button color="primary" (click)="closeDialog()">Ok</button>
     }
   </mat-dialog-actions>
 </div>
