--- a/angular-vanilla/src/app/lib/dynamic-form/dynamic-form.component.html
+++ b/angular-vanilla/src/app/lib/dynamic-form/dynamic-form.component.html
@@ -10,17 +10,7 @@
   "
 >
   @for (field of settings.formFields; track field.key) { @if (field.type ===
-  'text' || field.type === 'email'||field.type==='password') {
-  <mat-form-field appearance="outline">
-    <mat-label>{{ field.label }}</mat-label>
-    <input
-      matInput
-      [formControlName]="field.key"
-      [type]="field.type"
-      [placeholder]="field.label"
-    />
-  </mat-form-field>
-  } @else if (field.type === 'checkbox') {
+  'checkbox') {
   <mat-checkbox [formControlName]="field.key">{{ field.label }}</mat-checkbox>
   } @else if (field.type === 'select') {
   <mat-form-field appearance="outline">
@@ -31,9 +21,33 @@
       }
     </mat-select>
   </mat-form-field>
+
+  } @else if (field.type === 'selectId') {
+  <app-select-id-field
+    [label]="field.label"
+    [theFormControl]="settings.dynamicForm.controls[field.key]"
+    [config]="field"
+  />
+  } @else if (field.type=='date'){
+  <mat-form-field appearance="outline">
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="picker" [formControlName]="field.key" />
+    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  } @else {
+  <mat-form-field appearance="outline">
+    <mat-label>{{ field.label }}</mat-label>
+    <input
+      matInput
+      [formControlName]="field.key"
+      [type]="field.type"
+      [placeholder]="field.label"
+    />
+  </mat-form-field>
   } @if (settings.dynamicForm.get(field.key)?.invalid &&
   settings.dynamicForm.get(field.key)?.touched) {
-  <mat-error>{{ field.label }} is required</mat-error>
+  <mat-error> {{ settings.getFieldErrorText(field) }}</mat-error>
   } } @if(showSubmit){
   <button
     mat-raised-button
