--- a/angular-vanilla/src/app/lib/select-id-field/select-id-field.component.html
+++ b/angular-vanilla/src/app/lib/select-id-field/select-id-field.component.html
@@ -5,7 +5,12 @@
     [formControl]="searchControl"
     [matAutocomplete]="auto"
   />
-  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+  <mat-label>{{ label }}</mat-label>
+  <mat-autocomplete
+    #auto="matAutocomplete"
+    [displayWith]="displayFn"
+    (optionSelected)="theFormControl.setValue($event.option.value.id)"
+  >
     <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
       {{ option.caption }}
     </mat-option>
