--- a/angular-vanilla/src/app/lib/form-dialog/form-dialog.component.html
+++ b/angular-vanilla/src/app/lib/form-dialog/form-dialog.component.html
@@ -12,9 +12,9 @@
     mat-raised-button
     color="accent"
     (click)="confirm()"
-    [disabled]="submitting"
+    [disabled]="settings.submitting"
   >
-    @if (!submitting){ Submit }@else{
+    @if (!settings.submitting){ Submit }@else{
     <mat-spinner [diameter]="20" />
     }
   </button>
